hir/src/output/snapshots/transmute_hir__output__xml__tests__write_array.snap
---
source: hir/src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">a</ident>
      <ident id="ident:1">b</ident>
      <ident id="ident:2">add</ident>
      <ident id="ident:3">boolean</ident>
      <ident id="ident:4">div</ident>
      <ident id="ident:5">eq</ident>
      <ident id="ident:6">ge</ident>
      <ident id="ident:7">gt</ident>
      <ident id="ident:8">le</ident>
      <ident id="ident:9">lt</ident>
      <ident id="ident:10">mul</ident>
      <ident id="ident:11">neg</ident>
      <ident id="ident:12">neq</ident>
      <ident id="ident:13">number</ident>
      <ident id="ident:14">print</ident>
      <ident id="ident:15">sub</ident>
      <ident id="ident:16">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="18">
      <let>
        <identifier line="1" column="5" start="4" len="1">a</identifier>
        <expression line="1" column="9" start="8" len="9">
          <expr id="expr:3" line="1" column="9" start="8" len="9">
            <array_init>
              <values>
                <expr id="expr:0" line="1" column="10" start="9" len="1">
                  <number>1</number>
                </expr>
                <expr id="expr:1" line="1" column="13" start="12" len="1">
                  <number>2</number>
                </expr>
                <expr id="expr:2" line="1" column="16" start="15" len="1">
                  <number>3</number>
                </expr>
              </values>
            </array_init>
          </expr>
        </expression>
      </let>
    </stmt>
    <stmt id="stmt:1" line="1" column="20" start="19" len="13">
      <let>
        <identifier line="1" column="24" start="23" len="1">b</identifier>
        <expression line="1" column="29" start="28" len="3">
          <expr id="expr:6" line="1" column="29" start="28" len="3">
            <array-access>
              <base>
                <expr id="expr:4" line="1" column="28" start="27" len="1">
                  <identifier-ref id="ident-ref:0" ident-ref="ident:0" target-id="stmt:0" type-ref="">a</identifier-ref>
                </expr>
              </base>
              <index>
                <expr id="expr:5" line="1" column="30" start="29" len="1">
                  <number>1</number>
                </expr>
              </index>
            </array-access>
          </expr>
        </expression>
      </let>
    </stmt>
  </ast>
</unit>
