hir/src/output/snapshots/transmute_hir__output__xml__tests__write_assignment.snap
---
source: hir/src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">n</ident>
      <ident id="ident:1">add</ident>
      <ident id="ident:2">boolean</ident>
      <ident id="ident:3">div</ident>
      <ident id="ident:4">eq</ident>
      <ident id="ident:5">ge</ident>
      <ident id="ident:6">gt</ident>
      <ident id="ident:7">le</ident>
      <ident id="ident:8">lt</ident>
      <ident id="ident:9">mul</ident>
      <ident id="ident:10">neg</ident>
      <ident id="ident:11">neq</ident>
      <ident id="ident:12">number</ident>
      <ident id="ident:13">print</ident>
      <ident id="ident:14">sub</ident>
      <ident id="ident:15">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="10">
      <let>
        <identifier line="1" column="5" start="4" len="1">n</identifier>
        <expression line="1" column="9" start="8" len="1">
          <expr id="expr:0" line="1" column="9" start="8" len="1">
            <number>0</number>
          </expr>
        </expression>
      </let>
    </stmt>
    <stmt id="stmt:1" line="1" column="12" start="11" len="7">
      <expr id="expr:2" line="1" column="12" start="11" len="6">
        <assign ident-ref="ident:0" target-id="stmt:0">
          <identifier>n</identifier>
          <expression>
            <expr id="expr:1" line="1" column="16" start="15" len="2">
              <number>42</number>
            </expr>
          </expression>
        </assign>
      </expr>
    </stmt>
  </ast>
</unit>
