hir/src/output/snapshots/transmute_hir__output__xml__tests__write_fibonacci_iter.snap
---
source: hir/src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">f</ident>
      <ident id="ident:1">n</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">prev_prev</ident>
      <ident id="ident:4">prev</ident>
      <ident id="ident:5">current</ident>
      <ident id="ident:6">m</ident>
      <ident id="ident:7">eq</ident>
      <ident id="ident:8">gt</ident>
      <ident id="ident:9">add</ident>
      <ident id="ident:10">sub</ident>
      <ident id="ident:11">boolean</ident>
      <ident id="ident:12">div</ident>
      <ident id="ident:13">ge</ident>
      <ident id="ident:14">le</ident>
      <ident id="ident:15">lt</ident>
      <ident id="ident:16">mul</ident>
      <ident id="ident:17">neg</ident>
      <ident id="ident:18">neq</ident>
      <ident id="ident:19">void</ident>
    </identifiers>
    <stmt id="stmt:14" line="2" column="13" start="13" len="470">
      <fn>
        <identifier line="2" column="17" start="17" len="1">f</identifier>
        <type line="2" column="31" start="31" len="6">number</type>
        <parameters>
          <parameter id="stmt:14:0" line="2" column="19" start="19" len="9">
            <name line="2" column="19" start="19" len="1">n</name>
            <type line="2" column="22" start="22" len="6">number</type>
          </parameter>
        </parameters>
        <body line="2" column="40" start="40" len="443">
          <expr id="expr:34" line="2" column="40" start="40" len="443">
            <block>
              <stmt id="stmt:1" line="3" column="17" start="58" len="20">
                <expr id="expr:5" line="3" column="17" start="58" len="20">
                  <if>
                    <condition>
                      <expr id="expr:2" line="3" column="20" start="61" len="6">
                        <call line="3" column="20" start="61" len="6" ident-ref="ident:7" name="eq" target-id="native:eq:number:number:boolean">
                          <parameters>
                            <parameter>
                              <expr id="expr:0" line="3" column="20" start="61" len="1">
                                <identifier-ref id="ident-ref:2" ident-ref="ident:1" target-id="stmt:14:0" type-ref="">n</identifier-ref>
                              </expr>
                            </parameter>
                            <parameter>
                              <expr id="expr:1" line="3" column="25" start="66" len="1">
                                <number>0</number>
                              </expr>
                            </parameter>
                          </parameters>
                        </call>
                      </expr>
                    </condition>
                    <true>
                      <expr id="expr:4" line="3" column="27" start="68" len="10">
                        <block>
                          <stmt id="stmt:0" line="3" column="29" start="70" len="6">
                            <ret mode="explicit" line="3" column="29" start="70" len="6">
                              <expr id="expr:3" line="3" column="33" start="74" len="1">
                                <number>0</number>
                              </expr>
                            </ret>
                          </stmt>
                        </block>
                      </expr>
                    </true>
                  </if>
                </expr>
              </stmt>
              <stmt id="stmt:3" line="4" column="17" start="95" len="20">
                <expr id="expr:11" line="4" column="17" start="95" len="20">
                  <if>
                    <condition>
                      <expr id="expr:8" line="4" column="20" start="98" len="6">
                        <call line="4" column="20" start="98" len="6" ident-ref="ident:7" name="eq" target-id="native:eq:number:number:boolean">
                          <parameters>
                            <parameter>
                              <expr id="expr:6" line="4" column="20" start="98" len="1">
                                <identifier-ref id="ident-ref:3" ident-ref="ident:1" target-id="stmt:14:0" type-ref="">n</identifier-ref>
                              </expr>
                            </parameter>
                            <parameter>
                              <expr id="expr:7" line="4" column="25" start="103" len="1">
                                <number>1</number>
                              </expr>
                            </parameter>
                          </parameters>
                        </call>
                      </expr>
                    </condition>
                    <true>
                      <expr id="expr:10" line="4" column="27" start="105" len="10">
                        <block>
                          <stmt id="stmt:2" line="4" column="29" start="107" len="6">
                            <ret mode="explicit" line="4" column="29" start="107" len="6">
                              <expr id="expr:9" line="4" column="33" start="111" len="1">
                                <number>1</number>
                              </expr>
                            </ret>
                          </stmt>
                        </block>
                      </expr>
                    </true>
                  </if>
                </expr>
              </stmt>
              <stmt id="stmt:4" line="6" column="17" start="133" len="18">
                <let>
                  <identifier line="6" column="21" start="137" len="9">prev_prev</identifier>
                  <expression line="6" column="33" start="149" len="1">
                    <expr id="expr:12" line="6" column="33" start="149" len="1">
                      <number>0</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:5" line="7" column="17" start="168" len="13">
                <let>
                  <identifier line="7" column="21" start="172" len="4">prev</identifier>
                  <expression line="7" column="28" start="179" len="1">
                    <expr id="expr:13" line="7" column="28" start="179" len="1">
                      <number>1</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:6" line="8" column="17" start="198" len="16">
                <let>
                  <identifier line="8" column="21" start="202" len="7">current</identifier>
                  <expression line="8" column="31" start="212" len="1">
                    <expr id="expr:14" line="8" column="31" start="212" len="1">
                      <number>0</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:7" line="10" column="17" start="232" len="10">
                <let>
                  <identifier line="10" column="21" start="236" len="1">m</identifier>
                  <expression line="10" column="25" start="240" len="1">
                    <expr id="expr:15" line="10" column="25" start="240" len="1">
                      <identifier-ref id="ident-ref:4" ident-ref="ident:1" target-id="stmt:14:0" type-ref="">n</identifier-ref>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:12" line="11" column="17" start="259" len="184">
                <expr id="expr:32" line="11" column="17" start="259" len="184">
                  <while>
                    <condition line="11" column="23" start="265" len="5">
                      <expr id="expr:18" line="11" column="23" start="265" len="5">
                        <call line="11" column="23" start="265" len="5" ident-ref="ident:8" name="gt" target-id="native:gt:number:number:boolean">
                          <parameters>
                            <parameter>
                              <expr id="expr:16" line="11" column="23" start="265" len="1">
                                <identifier-ref id="ident-ref:5" ident-ref="ident:6" target-id="stmt:7" type-ref="">m</identifier-ref>
                              </expr>
                            </parameter>
                            <parameter>
                              <expr id="expr:17" line="11" column="27" start="269" len="1">
                                <number>1</number>
                              </expr>
                            </parameter>
                          </parameters>
                        </call>
                      </expr>
                    </condition>
                    <body>
                      <expr id="expr:31" line="11" column="29" start="271" len="172">
                        <block>
                          <stmt id="stmt:8" line="12" column="21" start="293" len="27">
                            <expr id="expr:22" line="12" column="21" start="293" len="26">
                              <assign ident-ref="ident:5" target-id="stmt:6">
                                <identifier>current</identifier>
                                <expression>
                                  <expr id="expr:21" line="12" column="31" start="303" len="16">
                                    <call line="12" column="31" start="303" len="16" ident-ref="ident:9" name="add" target-id="native:add:number:number:number">
                                      <parameters>
                                        <parameter>
                                          <expr id="expr:19" line="12" column="31" start="303" len="9">
                                            <identifier-ref id="ident-ref:7" ident-ref="ident:3" target-id="stmt:4" type-ref="">prev_prev</identifier-ref>
                                          </expr>
                                        </parameter>
                                        <parameter>
                                          <expr id="expr:20" line="12" column="43" start="315" len="4">
                                            <identifier-ref id="ident-ref:8" ident-ref="ident:4" target-id="stmt:5" type-ref="">prev</identifier-ref>
                                          </expr>
                                        </parameter>
                                      </parameters>
                                    </call>
                                  </expr>
                                </expression>
                              </assign>
                            </expr>
                          </stmt>
                          <stmt id="stmt:9" line="13" column="21" start="341" len="17">
                            <expr id="expr:24" line="13" column="21" start="341" len="16">
                              <assign ident-ref="ident:3" target-id="stmt:4">
                                <identifier>prev_prev</identifier>
                                <expression>
                                  <expr id="expr:23" line="13" column="33" start="353" len="4">
                                    <identifier-ref id="ident-ref:10" ident-ref="ident:4" target-id="stmt:5" type-ref="">prev</identifier-ref>
                                  </expr>
                                </expression>
                              </assign>
                            </expr>
                          </stmt>
                          <stmt id="stmt:10" line="14" column="21" start="379" len="15">
                            <expr id="expr:26" line="14" column="21" start="379" len="14">
                              <assign ident-ref="ident:4" target-id="stmt:5">
                                <identifier>prev</identifier>
                                <expression>
                                  <expr id="expr:25" line="14" column="28" start="386" len="7">
                                    <identifier-ref id="ident-ref:12" ident-ref="ident:5" target-id="stmt:6" type-ref="">current</identifier-ref>
                                  </expr>
                                </expression>
                              </assign>
                            </expr>
                          </stmt>
                          <stmt id="stmt:11" line="15" column="21" start="415" len="10">
                            <expr id="expr:30" line="15" column="21" start="415" len="9">
                              <assign ident-ref="ident:6" target-id="stmt:7">
                                <identifier>m</identifier>
                                <expression>
                                  <expr id="expr:29" line="15" column="25" start="419" len="5">
                                    <call line="15" column="25" start="419" len="5" ident-ref="ident:10" name="sub" target-id="native:sub:number:number:number">
                                      <parameters>
                                        <parameter>
                                          <expr id="expr:27" line="15" column="25" start="419" len="1">
                                            <identifier-ref id="ident-ref:14" ident-ref="ident:6" target-id="stmt:7" type-ref="">m</identifier-ref>
                                          </expr>
                                        </parameter>
                                        <parameter>
                                          <expr id="expr:28" line="15" column="29" start="423" len="1">
                                            <number>1</number>
                                          </expr>
                                        </parameter>
                                      </parameters>
                                    </call>
                                  </expr>
                                </expression>
                              </assign>
                            </expr>
                          </stmt>
                        </block>
                      </expr>
                    </body>
                  </while>
                </expr>
              </stmt>
              <stmt id="stmt:13" line="18" column="17" start="461" len="8">
                <ret mode="implicit" line="18" column="17" start="461" len="8">
                  <expr id="expr:33" line="18" column="17" start="461" len="7">
                    <identifier-ref id="ident-ref:15" ident-ref="ident:5" target-id="stmt:6" type-ref="">current</identifier-ref>
                  </expr>
                </ret>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
